# acorn-calc

./: .gitignore  CMakeLists.txt  README.md
docs/: classes.puml  parser.md  ui.md  use_case.puml
include/View/: HistoryItemWidget.h  MainWindow.h  PrimaryLineEdit.h
include/ViewModel/: CMakeLists.txt  HistoryItem.hpp  HsCalcStateWrapper.hpp  MainViewModel.hpp  PreciseOutputViewModel.hpp
src/: CMakeLists.txt  test.cpp
src/Main/: main.cpp
src/Test/: ViewModelTest.cpp  main.cpp
src/View/: HistoryItemWidget.cpp  MainWindow.cpp  MainWindow.ui  PreciseOutputWindow.cpp  PreciseOutputWindow.ui  PrimaryLineEdit.cpp
src/ViewModel/: HsCalcStateWrapper.cpp  MainViewModel.cpp  PreciseOutputViewModel.cpp
